--- a/lessons/index.html
+++ b/lessons/index.html
@@ -21,11 +21,11 @@
             <div class="lesson-grid">
                 <a href="lesson1.html" class="lesson-card">
                     <h3>Lesson 1: Discord Moderation Basics</h3>
-                    <p>Learn how to manage Virtual Reality Entertainment's Discord servers effectively.</p>
+                    <p>Master the four-step verification system and essential tools for moderating VRE's Discord servers.</p>
                 </a>
                 <a href="lesson2.html" class="lesson-card">
-                    <h3>Lesson 2: VRChat Community Management</h3>
-                    <p>Understand the essentials of moderating VRChat spaces for VRE.</p>
+                    <h3>Lesson 2: How to Correct Behavior Proactively</h3>
+                    <p>Learn proactive strategies to address behavioral issues early and maintain a positive community environment.</p>
                 </a>
                 <a href="lesson3.html" class="lesson-card">
                     <h3>Lesson 3: FiveM Server Administration</h3>
