--- a/lessons/index.html
+++ b/lessons/index.html
@@ -28,8 +28,8 @@
                     <p>Learn proactive strategies to address behavioral issues early and maintain a positive community environment.</p>
                 </a>
                 <a href="lesson3.html" class="lesson-card">
-                    <h3>Lesson 3: FiveM Server Administration</h3>
-                    <p>Master the tools and techniques for moderating VRE's FiveM servers.</p>
+                    <h3>Lesson 3: Understanding How & When to Use Moderation Tools</h3>
+                    <p>Learn to effectively use Discord and VRChat moderation tools, including Volt, to maintain a safe and positive community.</p>
                 </a>
                 <a href="lesson4.html" class="lesson-card">
                     <h3>Lesson 4: Minecraft Server Moderation</h3>
