--- a/index.html
+++ b/index.html
@@ -5,6 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VRE Staff Training Hub</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background: linear-gradient(135deg, #8A2BE2, #00FFFF); /* Neon Purple to Neon Blue gradient */
+            color: #FFFFFF; /* White text for contrast */
+            font-family: Arial, sans-serif;
+        }
+
+        .navbar {
+            background: rgba(0, 0, 0, 0.8); /* Semi-transparent black for navbar */
+        }
+
+        .navbar .logo {
+            color: #FFFFFF; /* White logo text */
+        }
+
+        .nav-links a {
+            color: #FFFFFF; /* White links */
+        }
+
+        .hero {
+            background: rgba(0, 0, 0, 0.6); /* Semi-transparent black overlay */
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        .cta-button {
+            background: #8A2BE2; /* Neon Purple */
+            color: #FFFFFF;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            transition: background 0.3s ease;
+        }
+
+        .cta-button:hover {
+            background: #00FFFF; /* Neon Blue on hover */
+        }
+
+        .lesson-card {
+            background: rgba(0, 0, 0, 0.7); /* Semi-transparent black for cards */
+            color: #FFFFFF;
+            padding: 15px;
+            border-radius: 10px;
+            transition: transform 0.3s ease, background 0.3s ease;
+        }
+
+        .lesson-card:hover {
+            transform: scale(1.05);
+            background: rgba(138, 43, 226, 0.9); /* Slightly brighter Neon Purple on hover */
+        }
+
+        footer {
+            background: rgba(0, 0, 0, 0.9); /* Dark footer */
+            color: #FFFFFF;
+        }
+
+        .social-links a {
+            color: #00FFFF; /* Neon Blue links */
+        }
+
+        .social-links a:hover {
+            color: #8A2BE2; /* Neon Purple on hover */
+        }
+    </style>
 </head>
 <body>
     <header>
