--- a/index.html
+++ b/index.html
@@ -86,26 +86,10 @@
         </div>
     </header>
     <main>
-        <section id="lessons" class="lessons">
-            <h2>Available Lessons</h2>
-            <div class="lesson-grid">
-                <a href="lessons/lesson1.html" class="lesson-card">
-                    <h3>Lesson 1: Discord Moderation Basics</h3>
-                    <p>Learn how to manage Virtual Reality Entertainment's Discord servers effectively.</p>
-                </a>
-                <a href="lessons/lesson2.html" class="lesson-card">
-                    <h3>Lesson 2: VRChat Community Management</h3>
-                    <p>Understand the essentials of moderating VRChat spaces for VRE.</p>
-                </a>
-                <a href="lessons/lesson3.html" class="lesson-card">
-                    <h3>Lesson 3: FiveM Server Administration</h3>
-                    <p>Master the tools and techniques for moderating VRE's FiveM servers.</p>
-                </a>
-                <a href="lessons/lesson4.html" class="lesson-card">
-                    <h3>Lesson 4: Minecraft Server Moderation</h3>
-                    <p>Explore best practices for managing VRE's Minecraft communities.</p>
-                </a>
-            </div>
+        <section id="welcome" class="welcome-section">
+            <h2>Welcome to the VRE Staff Portal</h2>
+            <p>We are excited to introduce the brand-new VRE Staff Training Hub! This portal will serve as the central location for all training resources, guides, and updates for Virtual Reality Entertainment staff members.</p>
+            <p>Whether you're a new team member or a seasoned moderator, this hub will provide you with the tools and knowledge you need to excel in your role. Stay tuned as we continue to add new resources and improve the platform to better serve your needs.</p>
         </section>
     </main>
     <footer>
