--- a/index.html
+++ b/index.html
@@ -69,9 +69,53 @@
         .social-links a:hover {
             color: #8A2BE2; /* Neon Purple on hover */
         }
+
+        /* Password overlay styles */
+        #password-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            color: #FFFFFF;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+
+        #password-overlay input {
+            padding: 10px;
+            font-size: 16px;
+            margin: 10px 0;
+            border: none;
+            border-radius: 5px;
+        }
+
+        #password-overlay button {
+            background: #8A2BE2;
+            color: #FFFFFF;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        #password-overlay button:hover {
+            background: #00FFFF;
+        }
     </style>
 </head>
 <body>
+    <div id="password-overlay">
+        <h1>Enter Password</h1>
+        <input type="password" id="password-input" placeholder="Enter password">
+        <button onclick="checkPassword()">Submit</button>
+        <p id="error-message" style="color: red; display: none;">Incorrect password. Please try again.</p>
+    </div>
     <header>
         <nav class="navbar">
             <div class="logo">VRE Hub</div>
@@ -103,5 +147,15 @@
         </div>
     </footer>
     <script src="scripts.js"></script>
+    <script>
+        function checkPassword() {
+            const password = document.getElementById('password-input').value;
+            if (password === 'VRELabs') {
+                document.getElementById('password-overlay').style.display = 'none';
+            } else {
+                document.getElementById('error-message').style.display = 'block';
+            }
+        }
+    </script>
 </body>
 </html>
