--- a/lessons/index.html
+++ b/lessons/index.html
@@ -32,8 +32,8 @@
                     <p>Learn to effectively use Discord and VRChat moderation tools, including Volt, to maintain a safe and positive community.</p>
                 </a>
                 <a href="lesson4.html" class="lesson-card">
-                    <h3>Lesson 4: Minecraft Server Moderation</h3>
-                    <p>Explore best practices for managing VRE's Minecraft communities.</p>
+                    <h3>Lesson 4: Best Practices for VRChat Event Hosts and Moderators</h3>
+                    <p>Discover essential tips for hosting and moderating VRChat events to ensure a positive and inclusive experience.</p>
                 </a>
             </div>
         </section>
