--- a/lessons/index.html
+++ b/lessons/index.html
@@ -35,6 +35,10 @@
                     <h3>Lesson 4: Best Practices for VRChat Event Hosts and Moderators</h3>
                     <p>Discover essential tips for hosting and moderating VRChat events to ensure a positive and inclusive experience.</p>
                 </a>
+                <a href="lesson5.html" class="lesson-card">
+                    <h3>Lesson 5: Understanding the Importance of a Strong Presence for Moderators</h3>
+                    <p>Explore why a strong moderator presence is essential and how it shapes the behavior and culture of the community.</p>
+                </a>
             </div>
         </section>
     </main>
