--- a/lessons/index.html
+++ b/lessons/index.html
@@ -39,6 +39,10 @@
                     <h3>Lesson 5: Understanding the Importance of a Strong Presence for Moderators</h3>
                     <p>Explore why a strong moderator presence is essential and how it shapes the behavior and culture of the community.</p>
                 </a>
+                <a href="lesson6.html" class="lesson-card">
+                    <h3>Lesson 6: Understanding De-Escalation & Conflict Resolution</h3>
+                    <p>Learn techniques to manage and resolve conflicts effectively, fostering a positive and productive community environment.</p>
+                </a>
             </div>
         </section>
     </main>
