--- a/lessons/index.html
+++ b/lessons/index.html
@@ -43,6 +43,10 @@
                     <h3>Lesson 6: Understanding De-Escalation & Conflict Resolution</h3>
                     <p>Learn techniques to manage and resolve conflicts effectively, fostering a positive and productive community environment.</p>
                 </a>
+                <a href="lesson7.html" class="lesson-card">
+                    <h3>Lesson 7: Progress Performance Improvement Plans</h3>
+                    <p>Learn how to use structured improvement plans to enhance event quality, staff performance, and community satisfaction.</p>
+                </a>
             </div>
         </section>
     </main>
