--- a/lessons/index.html
+++ b/lessons/index.html
@@ -47,6 +47,10 @@
                     <h3>Lesson 7: Progress Performance Improvement Plans</h3>
                     <p>Learn how to use structured improvement plans to enhance event quality, staff performance, and community satisfaction.</p>
                 </a>
+                <a href="lesson8.html" class="lesson-card">
+                    <h3>Lesson 8: The Moderator Bible</h3>
+                    <p>Explore the definitive guide for VREvents moderators, covering rules, tools, and best practices for effective moderation.</p>
+                </a>
             </div>
         </section>
     </main>
