--- a/lessons/index.html
+++ b/lessons/index.html
@@ -51,6 +51,10 @@
                     <h3>Lesson 8: The Moderator Bible</h3>
                     <p>Explore the definitive guide for VREvents moderators, covering rules, tools, and best practices for effective moderation.</p>
                 </a>
+                <a href="lesson9.html" class="lesson-card">
+                    <h3>Lesson 9: Event Hosting & Planning Guide</h3>
+                    <p>Learn how to plan, host, and improve events to keep your community engaged and entertained.</p>
+                </a>
             </div>
         </section>
     </main>
