--- a/lessons/index.html
+++ b/lessons/index.html
@@ -55,6 +55,10 @@
                     <h3>Lesson 9: Event Hosting & Planning Guide</h3>
                     <p>Learn how to plan, host, and improve events to keep your community engaged and entertained.</p>
                 </a>
+                <a href="lesson10.html" class="lesson-card">
+                    <h3>Lesson 10: New Member Retention Initiative</h3>
+                    <p>Learn how to foster a welcoming environment to improve new member retention and engagement.</p>
+                </a>
             </div>
         </section>
     </main>
