--- a/lessons/index.html
+++ b/lessons/index.html
@@ -59,6 +59,10 @@
                     <h3>Lesson 10: New Member Retention Initiative</h3>
                     <p>Learn how to foster a welcoming environment to improve new member retention and engagement.</p>
                 </a>
+                <a href="lesson11.html" class="lesson-card">
+                    <h3>Lesson 11: Understanding How Mutes Interact with the Verification System</h3>
+                    <p>Learn how the mute role affects verification and how to manage muted users effectively.</p>
+                </a>
             </div>
         </section>
     </main>
