--- a/lessons/index.html
+++ b/lessons/index.html
@@ -63,6 +63,10 @@
                     <h3>Lesson 11: Understanding How Mutes Interact with the Verification System</h3>
                     <p>Learn how the mute role affects verification and how to manage muted users effectively.</p>
                 </a>
+                <a href="lesson12.html" class="lesson-card">
+                    <h3>Lesson 12: Understanding How to Moderate Effectively in Minecraft</h3>
+                    <p>Learn the tools, commands, and best practices for moderating the VRE Minecraft SMP effectively.</p>
+                </a>
             </div>
         </section>
     </main>
