--- a/lessons/index.html
+++ b/lessons/index.html
@@ -67,6 +67,10 @@
                     <h3>Lesson 12: Understanding How to Moderate Effectively in Minecraft</h3>
                     <p>Learn the tools, commands, and best practices for moderating the VRE Minecraft SMP effectively.</p>
                 </a>
+                <a href="lesson13.html" class="lesson-card">
+                    <h3>Lesson 13: Understanding How CoreProtect Works</h3>
+                    <p>Learn how to use CoreProtect to track and undo rule violations on the VRE Minecraft SMP.</p>
+                </a>
             </div>
         </section>
     </main>
