--- a/lessons/index.html
+++ b/lessons/index.html
@@ -71,6 +71,10 @@
                     <h3>Lesson 13: Understanding How CoreProtect Works</h3>
                     <p>Learn how to use CoreProtect to track and undo rule violations on the VRE Minecraft SMP.</p>
                 </a>
+                <a href="lesson14.html" class="lesson-card">
+                    <h3>Lesson 14: Scheduling Guidelines for VREvents</h3>
+                    <p>Learn the principles and best practices for scheduling engaging and well-balanced events for the VREvents community.</p>
+                </a>
             </div>
         </section>
     </main>
