--- a/lessons/index.html
+++ b/lessons/index.html
@@ -75,6 +75,10 @@
                     <h3>Lesson 14: Scheduling Guidelines for VREvents</h3>
                     <p>Learn the principles and best practices for scheduling engaging and well-balanced events for the VREvents community.</p>
                 </a>
+                <a href="lesson15.html" class="lesson-card">
+                    <h3>Lesson 15: Staff Accountability & Improvement Process (SAIP)</h3>
+                    <p>Learn how SAIP ensures fairness, accountability, and improvement for staff behavior within VRE.</p>
+                </a>
             </div>
         </section>
     </main>
