--- a/lessons/index.html
+++ b/lessons/index.html
@@ -79,6 +79,10 @@
                     <h3>Lesson 15: Staff Accountability & Improvement Process (SAIP)</h3>
                     <p>Learn how SAIP ensures fairness, accountability, and improvement for staff behavior within VRE.</p>
                 </a>
+                <a href="lesson16.html" class="lesson-card">
+                    <h3>Lesson 16: Understanding the VRChat-based VREvents FAQ</h3>
+                    <p>Master the answers to frequently asked questions about VRChat-based events to assist members effectively.</p>
+                </a>
             </div>
         </section>
     </main>
