--- a/lessons/index.html
+++ b/lessons/index.html
@@ -83,6 +83,10 @@
                     <h3>Lesson 16: Understanding the VRChat-based VREvents FAQ</h3>
                     <p>Master the answers to frequently asked questions about VRChat-based events to assist members effectively.</p>
                 </a>
+                <a href="lesson17.html" class="lesson-card">
+                    <h3>Lesson 17: Understanding A.T.O.S (Advanced Ticket Operations System)</h3>
+                    <p>Learn how to efficiently manage user requests and streamline ticket operations using A.T.O.S.</p>
+                </a>
             </div>
         </section>
     </main>
