--- a/lessons/index.html
+++ b/lessons/index.html
@@ -87,6 +87,10 @@
                     <h3>Lesson 17: Understanding A.T.O.S (Advanced Ticket Operations System)</h3>
                     <p>Learn how to efficiently manage user requests and streamline ticket operations using A.T.O.S.</p>
                 </a>
+                <a href="lesson18.html" class="lesson-card">
+                    <h3>Lesson 18: Understanding the Bouncer/Buffer Role</h3>
+                    <p>Learn how to screen users and ensure event security as part of the Bouncer/Buffer role.</p>
+                </a>
             </div>
         </section>
     </main>
