--- a/lessons/index.html
+++ b/lessons/index.html
@@ -91,6 +91,10 @@
                     <h3>Lesson 18: Understanding the Bouncer/Buffer Role</h3>
                     <p>Learn how to screen users and ensure event security as part of the Bouncer/Buffer role.</p>
                 </a>
+                <a href="lesson19.html" class="lesson-card">
+                    <h3>Lesson 19: Moderation with Clarity, Consistency, and Strength</h3>
+                    <p>Learn how to enforce rules professionally, protect the community, and uphold VRE’s values.</p>
+                </a>
             </div>
         </section>
     </main>
