--- a/lessons/index.html
+++ b/lessons/index.html
@@ -95,6 +95,10 @@
                     <h3>Lesson 19: Moderation with Clarity, Consistency, and Strength</h3>
                     <p>Learn how to enforce rules professionally, protect the community, and uphold VRE’s values.</p>
                 </a>
+                <a href="lesson20.html" class="lesson-card">
+                    <h3>Lesson 20: Navigating Rule Violations in Interpersonal Dynamics</h3>
+                    <p>Learn how to handle rule violations involving personal relationships with fairness, integrity, and professionalism.</p>
+                </a>
             </div>
         </section>
     </main>
