ADDED LESSON 21 FUCK THE TRAINING SITE THIS WAS A BITCH

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -99,6 +99,10 @@
                     <h3>Lesson 20: Navigating Rule Violations in Interpersonal Dynamics</h3>
                     <p>Learn how to handle rule violations involving personal relationships with fairness, integrity, and professionalism.</p>
                 </a>
+                <a href="lesson21.html" class="lesson-card">
+                    <h3>Lesson 21: S.H.I.E.L.D. Protocol</h3>
+                    <p>Learn how to securely handle internal exchanges, logs, and data to maintain integrity and discretion.</p>
+                </a>
             </div>
         </section>
     </main>
