--- a/lessons/index.html
+++ b/lessons/index.html
@@ -19,87 +19,87 @@
         <section class="lessons">
             <h2>Available Lessons</h2>
             <div class="lesson-grid">
-                <a href="lesson1.html" class="lesson-card">
+                <a href="lesson1.html" class="lesson-card discord high-importance">
                     <h3>Lesson 1: Discord Moderation Basics</h3>
                     <p>Master the four-step verification system and essential tools for moderating VRE's Discord servers.</p>
                 </a>
-                <a href="lesson2.html" class="lesson-card">
+                <a href="lesson2.html" class="lesson-card discord medium-importance">
                     <h3>Lesson 2: How to Correct Behavior Proactively</h3>
                     <p>Learn proactive strategies to address behavioral issues early and maintain a positive community environment.</p>
                 </a>
-                <a href="lesson3.html" class="lesson-card">
+                <a href="lesson3.html" class="lesson-card discord vrchat high-importance">
                     <h3>Lesson 3: Understanding How & When to Use Moderation Tools</h3>
                     <p>Learn to effectively use Discord and VRChat moderation tools, including Volt, to maintain a safe and positive community.</p>
                 </a>
-                <a href="lesson4.html" class="lesson-card">
+                <a href="lesson4.html" class="lesson-card vrchat medium-importance">
                     <h3>Lesson 4: Best Practices for VRChat Event Hosts and Moderators</h3>
                     <p>Discover essential tips for hosting and moderating VRChat events to ensure a positive and inclusive experience.</p>
                 </a>
-                <a href="lesson5.html" class="lesson-card">
+                <a href="lesson5.html" class="lesson-card discord low-importance">
                     <h3>Lesson 5: Understanding the Importance of a Strong Presence for Moderators</h3>
                     <p>Explore why a strong moderator presence is essential and how it shapes the behavior and culture of the community.</p>
                 </a>
-                <a href="lesson6.html" class="lesson-card">
+                <a href="lesson6.html" class="lesson-card discord medium-importance">
                     <h3>Lesson 6: Understanding De-Escalation & Conflict Resolution</h3>
                     <p>Learn techniques to manage and resolve conflicts effectively, fostering a positive and productive community environment.</p>
                 </a>
-                <a href="lesson7.html" class="lesson-card">
+                <a href="lesson7.html" class="lesson-card discord low-importance">
                     <h3>Lesson 7: Progress Performance Improvement Plans</h3>
                     <p>Learn how to use structured improvement plans to enhance event quality, staff performance, and community satisfaction.</p>
                 </a>
-                <a href="lesson8.html" class="lesson-card">
+                <a href="lesson8.html" class="lesson-card vrchat high-importance">
                     <h3>Lesson 8: The Moderator Bible</h3>
                     <p>Explore the definitive guide for VREvents moderators, covering rules, tools, and best practices for effective moderation.</p>
                 </a>
-                <a href="lesson9.html" class="lesson-card">
+                <a href="lesson9.html" class="lesson-card vrchat medium-importance">
                     <h3>Lesson 9: Event Hosting & Planning Guide</h3>
                     <p>Learn how to plan, host, and improve events to keep your community engaged and entertained.</p>
                 </a>
-                <a href="lesson10.html" class="lesson-card">
+                <a href="lesson10.html" class="lesson-card discord low-importance">
                     <h3>Lesson 10: New Member Retention Initiative</h3>
                     <p>Learn how to foster a welcoming environment to improve new member retention and engagement.</p>
                 </a>
-                <a href="lesson11.html" class="lesson-card">
+                <a href="lesson11.html" class="lesson-card discord high-importance">
                     <h3>Lesson 11: Understanding How Mutes Interact with the Verification System</h3>
                     <p>Learn how the mute role affects verification and how to manage muted users effectively.</p>
                 </a>
-                <a href="lesson12.html" class="lesson-card">
+                <a href="lesson12.html" class="lesson-card minecraft medium-importance">
                     <h3>Lesson 12: Understanding How to Moderate Effectively in Minecraft</h3>
                     <p>Learn the tools, commands, and best practices for moderating the VRE Minecraft SMP effectively.</p>
                 </a>
-                <a href="lesson13.html" class="lesson-card">
+                <a href="lesson13.html" class="lesson-card minecraft high-importance">
                     <h3>Lesson 13: Understanding How CoreProtect Works</h3>
                     <p>Learn how to use CoreProtect to track and undo rule violations on the VRE Minecraft SMP.</p>
                 </a>
-                <a href="lesson14.html" class="lesson-card">
+                <a href="lesson14.html" class="lesson-card vrchat medium-importance">
                     <h3>Lesson 14: Scheduling Guidelines for VREvents</h3>
                     <p>Learn the principles and best practices for scheduling engaging and well-balanced events for the VREvents community.</p>
                 </a>
-                <a href="lesson15.html" class="lesson-card">
+                <a href="lesson15.html" class="lesson-card discord high-importance">
                     <h3>Lesson 15: Staff Accountability & Improvement Process (SAIP)</h3>
                     <p>Learn how SAIP ensures fairness, accountability, and improvement for staff behavior within VRE.</p>
                 </a>
-                <a href="lesson16.html" class="lesson-card">
+                <a href="lesson16.html" class="lesson-card vrchat medium-importance">
                     <h3>Lesson 16: Understanding the VRChat-based VREvents FAQ</h3>
                     <p>Master the answers to frequently asked questions about VRChat-based events to assist members effectively.</p>
                 </a>
-                <a href="lesson17.html" class="lesson-card">
+                <a href="lesson17.html" class="lesson-card discord high-importance">
                     <h3>Lesson 17: Understanding A.T.O.S (Advanced Ticket Operations System)</h3>
                     <p>Learn how to efficiently manage user requests and streamline ticket operations using A.T.O.S.</p>
                 </a>
-                <a href="lesson18.html" class="lesson-card">
+                <a href="lesson18.html" class="lesson-card vrchat medium-importance">
                     <h3>Lesson 18: Understanding the Bouncer/Buffer Role</h3>
                     <p>Learn how to screen users and ensure event security as part of the Bouncer/Buffer role.</p>
                 </a>
-                <a href="lesson19.html" class="lesson-card">
+                <a href="lesson19.html" class="lesson-card discord high-importance">
                     <h3>Lesson 19: Moderation with Clarity, Consistency, and Strength</h3>
                     <p>Learn how to enforce rules professionally, protect the community, and uphold VRE’s values.</p>
                 </a>
-                <a href="lesson20.html" class="lesson-card">
+                <a href="lesson20.html" class="lesson-card discord medium-importance">
                     <h3>Lesson 20: Navigating Rule Violations in Interpersonal Dynamics</h3>
                     <p>Learn how to handle rule violations involving personal relationships with fairness, integrity, and professionalism.</p>
                 </a>
-                <a href="lesson21.html" class="lesson-card">
+                <a href="lesson21.html" class="lesson-card discord high-importance">
                     <h3>Lesson 21: S.H.I.E.L.D. Protocol</h3>
                     <p>Learn how to securely handle internal exchanges, logs, and data to maintain integrity and discretion.</p>
                 </a>
