Added Lessons 22 and 23, updated Index

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -103,6 +103,14 @@
                     <h3>Lesson 21: S.H.I.E.L.D. Protocol</h3>
                     <p>Learn how to securely handle internal exchanges, logs, and data to maintain integrity and discretion.</p>
                 </a>
+                <a href="lesson22.html" class="lesson-card discord high-importance">
+                    <h3>Lesson 22: Advanced Techniques for Community Engagement</h3>
+                    <p>Learn advanced strategies to foster engagement, build trust, and create a thriving community environment.</p>
+                </a>
+                <a href="lesson23.html" class="lesson-card discord high-importance">
+                    <h3>Lesson 23: Understanding How to Read, Fill Out, and Submit a F.L.A.R.E Report</h3>
+                    <p>Learn how to document events effectively using the F.L.A.R.E Report to ensure continuous improvement in community engagement.</p>
+                </a>
             </div>
         </section>
     </main>
