Update lessons index with 24

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -111,6 +111,10 @@
                     <h3>Lesson 23: Understanding How to Read, Fill Out, and Submit a F.L.A.R.E Report</h3>
                     <p>Learn how to document events effectively using the F.L.A.R.E Report to ensure continuous improvement in community engagement.</p>
                 </a>
+                <a href="lesson24.html" class="lesson-card discord high-importance">
+                    <h3>Lesson 24: VC Moderation – Disconnect vs Mute vs Deafen</h3>
+                    <p>Learn how to use VC moderation tools effectively to maintain a respectful and balanced environment in VRE spaces.</p>
+                </a>
             </div>
         </section>
     </main>
