--- a/lessons/index.html
+++ b/lessons/index.html
@@ -115,6 +115,10 @@
                     <h3>Lesson 24: VC Moderation – Disconnect vs Mute vs Deafen</h3>
                     <p>Learn how to use VC moderation tools effectively to maintain a respectful and balanced environment in VRE spaces.</p>
                 </a>
+                <a href="lesson25.html" class="lesson-card vrchat high-importance">
+                    <h3>Lesson 25: Understanding the Floater Sub-Role</h3>
+                    <p>Learn how the Floater role supports events by being adaptable, proactive, and engaging.</p>
+                </a>
             </div>
         </section>
     </main>
