--- a/lessons/lesson24.html
+++ b/lessons/lesson24.html
@@ -116,4 +116,13 @@ Time: (Timestamp or auto log)
     </div>
   </footer>
 </body>
+<script>
+    const ttsButton = document.getElementById('tts-button');
+    ttsButton.addEventListener('click', () => {
+      const content = document.querySelector('.lesson-content').innerText;
+      const speech = new SpeechSynthesisUtterance(content);
+      speech.lang = 'en-US';
+      window.speechSynthesis.speak(speech);
+    });
+  </script>
 </html>
