tts fix for lessons 22-24

--- a/lessons/lesson22.html
+++ b/lessons/lesson22.html
@@ -21,6 +21,7 @@
       <div class="lesson-header">
         <h1>Lesson 22: Understanding How to Handle Children & Teens in Online Spaces</h1>
         <p class="lesson-subtitle">Learn how to responsibly manage interactions with children and teens in online spaces to ensure safety, legality, and community comfort.</p>
+        <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
       </div>
       <article class="lesson-body">
         <h2 class="section-title">1. 🚸 Why This Matters</h2>
