--- a/lessons/lesson23.html
+++ b/lessons/lesson23.html
@@ -21,7 +21,8 @@
       <div class="lesson-header">
         <h1>Lesson 23: Understanding How to Read, Fill Out, and Submit a F.L.A.R.E Report</h1>
         <p class="lesson-subtitle">Learn how to effectively document events using the F.L.A.R.E Report for continuous improvement.</p>
-      </div>
+        <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
+    </div>
       <article class="lesson-body">
         <h2 class="section-title">1. What is a F.L.A.R.E Report?</h2>
         <p>The F.L.A.R.E Report is a post-event documentation form designed to capture Feedback, Learnings, Attendance, Reflection, and Enhancements. It's a structured way for staff to evaluate how an event went and ensure continual improvement in community engagement and event hosting.</p>
