--- a/lessons/lesson24.html
+++ b/lessons/lesson24.html
@@ -21,7 +21,8 @@
       <div class="lesson-header">
         <h1>Lesson 24: VC Moderation – Disconnect vs Mute vs Deafen</h1>
         <p class="lesson-subtitle">Learn how to use VC moderation tools effectively to maintain a respectful and balanced environment.</p>
-      </div>
+        <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
+    </div>
       <article class="lesson-body">
         <h2 class="section-title">1. 🔊 Server Mute</h2>
         <p><strong>What it does:</strong> Prevents the user from speaking until unmuted by a mod.</p>
