--- a/lessons/lesson25.html
+++ b/lessons/lesson25.html
@@ -97,14 +97,6 @@
       </ul>
     </div>
   </footer>
-  <script>
-    const ttsButton = document.getElementById('tts-button');
-    ttsButton.addEventListener('click', () => {
-      const content = document.querySelector('.lesson-content').innerText;
-      const speech = new SpeechSynthesisUtterance(content);
-      speech.lang = 'en-US';
-      window.speechSynthesis.speak(speech);
-    });
-  </script>
+  <script src="../scripts.js"></script>
 </body>
 </html>
