--- a/lessons/lesson1.html
+++ b/lessons/lesson1.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 1: Discord Moderation Basics</h1>
                 <p class="lesson-subtitle">Master the art of managing Virtual Reality Entertainment's Discord servers effectively.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">Overview</h2>
