--- a/lessons/lesson10.html
+++ b/lessons/lesson10.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 10: New Member Retention Initiative</h1>
                 <p class="lesson-subtitle">Learn how to foster a welcoming environment to improve new member retention and engagement.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">🛠️ Initiative Overview</h2>
