--- a/lessons/lesson11.html
+++ b/lessons/lesson11.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 11: Understanding How Mutes Interact with the Verification System</h1>
                 <p class="lesson-subtitle">Learn how the mute role affects user interactions with the verification system and how to manage muted users effectively.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">Overview</h2>
