--- a/lessons/lesson12.html
+++ b/lessons/lesson12.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 12: Understanding How to Moderate Effectively in Minecraft</h1>
                 <p class="lesson-subtitle">Learn the tools, commands, and best practices for moderating the VRE Minecraft SMP effectively.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">📌 Introduction</h2>
