--- a/lessons/lesson13.html
+++ b/lessons/lesson13.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 13: Understanding How CoreProtect Works</h1>
                 <p class="lesson-subtitle">Learn how to use CoreProtect to track and undo rule violations on the VRE Minecraft SMP.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">What is CoreProtect?</h2>
