--- a/lessons/lesson14.html
+++ b/lessons/lesson14.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 14: Scheduling Guidelines for VREvents</h1>
                 <p class="lesson-subtitle">Learn the principles and best practices for scheduling engaging and well-balanced events for the VREvents community.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">Event Scheduling Basics</h2>
