--- a/lessons/lesson15.html
+++ b/lessons/lesson15.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 15: Staff Accountability & Improvement Process (SAIP)</h1>
                 <p class="lesson-subtitle">Learn how SAIP ensures fairness, accountability, and improvement for staff behavior within VRE.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">📌 SAIP Overview</h2>
