--- a/lessons/lesson16.html
+++ b/lessons/lesson16.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 16: Understanding the VRChat-based VREvents FAQ</h1>
                 <p class="lesson-subtitle">Learn how to assist members effectively by mastering the answers to frequently asked questions about VRChat-based events.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">Objective</h2>
