--- a/lessons/lesson17.html
+++ b/lessons/lesson17.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 17: Understanding A.T.O.S (Advanced Ticket Operations System)</h1>
                 <p class="lesson-subtitle">Learn how to efficiently manage user requests and streamline ticket operations using A.T.O.S.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">📌 What is A.T.O.S?</h2>
