--- a/lessons/lesson18.html
+++ b/lessons/lesson18.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 18: Understanding the Bouncer/Buffer Role</h1>
                 <p class="lesson-subtitle">Learn how to screen users and ensure event security as part of the Bouncer/Buffer role.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">📌 Overview</h2>
