--- a/lessons/lesson19.html
+++ b/lessons/lesson19.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 19: Moderation with Clarity, Consistency, and Strength</h1>
                 <p class="lesson-subtitle">Learn how to enforce rules professionally, protect the community, and uphold VRE’s values.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">🧭 Purpose</h2>
