--- a/lessons/lesson2.html
+++ b/lessons/lesson2.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 2: How to Correct Behavior Proactively</h1>
                 <p class="lesson-subtitle">Learn how to address behavioral issues early to maintain a positive community environment.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">Introduction</h2>
