--- a/lessons/lesson20.html
+++ b/lessons/lesson20.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 20: Navigating Rule Violations in Interpersonal Dynamics</h1>
                 <p class="lesson-subtitle">Learn how to handle rule violations involving personal relationships with fairness, integrity, and professionalism.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">🧭 Purpose of this Guide</h2>
