--- a/lessons/lesson21.html
+++ b/lessons/lesson21.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 21: S.H.I.E.L.D. Protocol</h1>
                 <p class="lesson-subtitle">Learn how to securely handle internal exchanges, logs, and data to maintain integrity and discretion.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">🧠 Purpose</h2>
