--- a/lessons/lesson3.html
+++ b/lessons/lesson3.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Understanding How & When to Use Moderation Tools in Discord and VRChat</h1>
                 <p class="lesson-subtitle">Learn how to effectively use moderation tools to maintain a positive and enjoyable environment for all users.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">Introduction</h2>
