--- a/lessons/lesson5.html
+++ b/lessons/lesson5.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 5: Understanding the Importance of a Strong Presence for Moderators</h1>
                 <p class="lesson-subtitle">Learn why a strong moderator presence is essential and how it shapes the community's behavior.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">Introduction</h2>
