--- a/lessons/lesson6.html
+++ b/lessons/lesson6.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 6: Understanding De-Escalation & Conflict Resolution</h1>
                 <p class="lesson-subtitle">Learn how to manage and resolve conflicts effectively to maintain a positive and productive environment.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">Introduction</h2>
