--- a/lessons/lesson7.html
+++ b/lessons/lesson7.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 7: Progress Performance Improvement Plans</h1>
                 <p class="lesson-subtitle">Learn how to use structured improvement plans to enhance event quality and staff performance.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">Introduction</h2>
