--- a/lessons/lesson8.html
+++ b/lessons/lesson8.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 8: The Moderator Bible</h1>
                 <p class="lesson-subtitle">The definitive guide for VREvents moderators to maintain a safe, inclusive, and enjoyable environment.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">Introduction</h2>
