--- a/lessons/lesson9.html
+++ b/lessons/lesson9.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 9: Event Hosting & Planning Guide</h1>
                 <p class="lesson-subtitle">Learn how to plan, host, and improve events to keep your community engaged and entertained.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">Understanding Your Event’s Purpose</h2>
