--- a/lessons/lesson4.html
+++ b/lessons/lesson4.html
@@ -21,6 +21,7 @@
             <div class="lesson-header">
                 <h1>Lesson 4: Best Practices for VRChat Event Hosts and Moderators</h1>
                 <p class="lesson-subtitle">Learn how to host and moderate VRChat events effectively to create a positive and inclusive experience.</p>
+                <button id="tts-button" class="tts-button">🔊 Read Aloud</button>
             </div>
             <article class="lesson-body">
                 <h2 class="section-title">Introduction</h2>
