--- a/lessons/index.html
+++ b/lessons/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <section class="lessons">
-            <h2>Available Lessons</h2>
+            <h2 class="highlighted-title">Available Lessons</h2>
             <div class="lesson-grid">
                 <a href="lesson1.html" class="lesson-card discord high-importance">
                     <h3>Lesson 1: Discord Moderation Basics</h3>
