--- a/lessons/index.html
+++ b/lessons/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">VRE Lessons</div>
+            <div class="logo animated-gradient">VRE Lessons</div>
             <ul class="nav-links">
                 <li><a href="../index.html">Home</a></li>
             </ul>
