--- a/lessons/index.html
+++ b/lessons/index.html
@@ -14,6 +14,9 @@
                 <li><a href="../index.html">Home</a></li>
             </ul>
         </nav>
+        <div class="marquee">
+            <p>🎉 Welcome to the VRE Staff Training Hub! Check out the latest lessons and updates! 🎉</p>
+        </div>
     </header>
     <main>
         <section class="lessons">
