Progress Bar Update part 2

--- a/lessons/index.html
+++ b/lessons/index.html
@@ -19,6 +19,13 @@
         </div>
     </header>
     <main>
+        <section class="progress-section">
+            <h3>Progress</h3>
+            <div class="progress-bar-container">
+                <div class="progress-bar" id="progress-bar"></div>
+            </div>
+            <p id="progress-text">0 of 25 lessons completed</p>
+        </section>
         <section class="lessons">
             <h2 class="highlighted-title">Available Lessons</h2>
             <div class="lesson-grid">
