--- a/lessons/index.html
+++ b/lessons/index.html
@@ -19,13 +19,6 @@
         </div>
     </header>
     <main>
-        <section class="progress-section">
-            <h3>Progress</h3>
-            <div class="progress-bar-container">
-                <div class="progress-bar" id="progress-bar"></div>
-            </div>
-            <p id="progress-text">0 of 25 lessons completed</p>
-        </section>
         <section class="lessons">
             <h2 class="highlighted-title">Available Lessons</h2>
             <div class="lesson-grid">
@@ -142,6 +135,13 @@
             </ul>
         </div>
     </footer>
+    <div class="progress-section">
+        <h3>Progress</h3>
+        <div class="progress-bar-container">
+            <div class="progress-bar" id="progress-bar"></div>
+        </div>
+        <p id="progress-text">0 of 25 lessons completed</p>
+    </div>
     <script src="../scripts.js"></script>
 </body>
 </html>
